v
+ TODO ComboBox auf Aktuelles Buch einrasten
+ TODO Idee: Übersetzungsmanager mit integrietem Download
+ TODO Lesezeichen Reihenfolge umsortieren
+ TODO Lesezeichen Notiz grau oder so
+ TODO Hin-und-Herspringen zwischen 2 (oder mehr) Stellen
+ TODO Übersetzung auch nach Herunterscrollen weiter zeigen
+ Fix: Suchen-Scroller sprang bei Klicken 'Anzeigen'
+ Fix: Quelltext kommentiert

v2021_01_13
+ Neu: Einstellungen
+ Neu: Verse beginnen auf gleicher Höhe
+ Neu: Schriftgröße einstellbar
+ Fix: Fehlende Texte aus <p> - Tags
+ Fix: Race Condition beim Import in <unordered_map>
+ Fix: Laden map.at gelöschte Übersetzung

v2020_12_20
+ Neu: Fenster Minimieren
+ Neu: Arbeitsstand wird gespeichert
+ Neu: Lesezeichen
+ Neu: Icons + Tooltips
+ Neu: Suche
+ Neu: Import aus CSV (Exportiert aus SQLite3)
+ Neu: Unterstützung weiterer Glyphen (Zeichensätze)
+ Etc: Konsolenfenster versteckt
+ Etc: Verbesserter OSIS-Import
+ Fix: Mehrere Übersetzung mit gleichen Namen in versch. Sprachen
+ Fix: Absturz bei der  Übersetzungsauswahl

v2020_12_18
+ Release 1