@@ -5,6 +5,7 @@ v
 + TODO Lesezeichen Notiz grau oder so
 + TODO Hin-und-Herspringen zwischen 2 (oder mehr) Stellen
 + TODO Übersetzung auch nach Herunterscrollen weiter zeigen
++ Neu: Pfeiltasten zur Navigation Vers/Kapitel
 + Fix: Suchen-Scroller sprang bei Klicken 'Anzeigen'
 + Fix: Quelltext kommentiert
 
